Add form reducer, input masking, form validation Add error message visibility and styling Cleaned up misc stylesheet formatting and rule positioning Refactored name and cvc inputs into single component Rigged up card illustration text props to state

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "credit-card-type": "^9.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-imask": "^7.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
